--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <AnalogClock
-        android:id="@+id/analogClock"
+    <TextClock
+        android:id="@+id/analogStyleClock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        android:format12Hour="hh:mm:ss a"
+        android:format24Hour="HH:mm:ss"
         android:visibility="gone" />
 
     <TextClock
@@ -18,5 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textSize="30sp"
+        android:format12Hour="hh:mm:ss a"
+        android:format24Hour="HH:mm:ss"
         android:visibility="gone" />
 </RelativeLayout>
